Fixed Scroll bar and gap

--- a/client/ui/models/APX6000/style.css
+++ b/client/ui/models/APX6000/style.css
@@ -1,19 +1,29 @@
 #radio-container {
-    position: fixed;
+    position: relative;
     bottom: 5px;
     right: 10px;
+    width: 300px;
     display: inline-block;
+    cursor: move;
+    z-index: 1000;
 }
+
+
+body {
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
+
 
 #radio-image {
     display: block;
-    width: 300px;
+    width: 100%;
     height: auto;
-    position: relative;
 }
 
 #rssi-icon {
-   position: absolute;
+    position: absolute;
     top: 69.5%;
     left: 30%;
     display: block;
@@ -33,6 +43,12 @@
     cursor: pointer;
 }
 
+#power-btn {
+    left: 87%;
+    top: 40%;
+    width: 20%;
+}
+
 #channel-up {
     left: 63%;
 }
@@ -46,40 +62,28 @@
 }
 
 #channel-knbu {
-	  left: 52%;
-}
-#channel-knbd {
-	  left: 44%;
-
-}
-#btn-emer {
-	  left: 28%;
-}
-
-#btn-emer {
-    position: absolute;
-    transform: translateX(-50%);
-    top: 45%;
-    z-index: 1;
-    display: block;
-    margin: 10px auto;
-    padding: 7px;
-    background-color: transparent;
-	color: transparent;
-    border: none;
-    cursor: pointer;
-}
-
-#channel-knbu, #channel-knbd {
-    position: absolute;
-    transform: translateX(-50%);
+    left: 52%;
     top: 35%;
-    z-index: 1;
+}
+
+#channel-knbd {
+    left: 44%;
+    top: 35%;
+}
+
+#btn-emer {
+    left: 28%;
+    top: 45%;
+}
+
+#btn-emer, #channel-knbu, #channel-knbd, #power-btn {
+    position: absolute;
+    transform: translateX(-50%);
     display: block;
     margin: 10px auto;
     padding: 7px;
     background-color: transparent;
-	color: transparent;
+    color: transparent;
     border: none;
     cursor: pointer;
 }
